<resources>
    <string name="app_name">Movie App</string>
    <string name="movies">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="add_movie">Add Movie</string>
    <string name="adding_to">Adding to</string>
    <string name="enter_name_of_movie">Enter name of movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="tell_some_details_about_the_movie">Tell some details about the movie</string>
    <string name="description">Description</string>
    <string name="choose_rating">Choose Rating</string>
    <string name="upload_image">Upload Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="please_check_internet">Please check internet</string>
    <string name="no_data_available">No data available</string>
</resources>